--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src='system/templates/js/jquery-ui-1.10.4.custom/js/jquery-ui-1.10.4.custom.min.js'></script>      
         <script type="text/javascript" src="system/templates/js/foundation-5.5.0/js/foundation.min.js"></script>
         <script src='json3.js'></script>
+        <script src='RESTInterface.js'></script>
         <script src='sprint.js'></script>
         <script src='scrumsprint.js'></script>
         <script type="text/javascript">
